--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10971,4 +10971,18 @@ a.text-dark:focus {
   font-style: italic;
 }
 
+.make-inline {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.make-inline select {
+  margin: 0 12px;
+}
+
+.make-inline.form-group {
+  margin-bottom: 0;
+}
+
 
